Fix: Add arrow highlighting and reduce Big Picture paragraph spacing

--- a/src/components/TLDRWidget.module.css
+++ b/src/components/TLDRWidget.module.css
@@ -506,7 +506,7 @@
 }
 
 .bigPictureText br {
-  line-height: 2.2;
+  line-height: 1.4;
 }
 
 
